@@ -9,6 +9,9 @@ Version 1.0
   because that doesn't keep all newlines at the end when the
   ``stripnl`` lexer option is False.
 
+- Add ``-N`` option to command-line interface to get a lexer name
+  for a given filename.
+
 - Add Tango style, written by Andre Roberge for the Crunchy project.
 
 - Add Python3TracebackLexer and ``python3`` option to 
